<resources>
    <string name="app_name">Fitness</string>
    <string name="sexe_male">Male</string>
    <string name="sexe_female">Female</string>
    <string name="register_textview">Register</string>
    <string name="name_hint">FullName</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="weight_hint">Weight Kg</string>
    <string name="register_button">Register</string>


    <string name="registerationSuccess">Registered with success</string>
    <string name="registrationFailed">Failed not registered</string>

    <!-- Strings related to Login Activity-->

    <string name="signup">Sign up</string>
    <string name="sign_in">Sign in</string>
    <string name="invalid_input">Invalid input please try again</string>
    <string name="successful_login">Successfully logged in</string>
    <string name="login_error"> Invalid login/password</string>

    <!-- Strings related to SignUpActivie -->
    <string name="text_view_no_account">New member? join us</string>
    <string name="confirm_password">Confirm password</string>
    <string name="error_message">Please fill all the field </string>
    <string name="email_not_sent">Email verification not send </string>
    <string name="email_sent">Please verify your Email for confirmation link </string>
    <string name="confirm_password_incorrect">Password incorrect </string>

    <!-- Strings related to Menu (bottom navigation) -->
    <string name="bottom_nav_home">Home</string>
    <string name="bottom_nav_dash_board">DashBoard</string>
    <string name="bottom_nav_settings">Settings</string>


    <!-- Strings for ExerciceActivity -->

    <string name="not_supported_lang">Not supported Language or Missing Data</string>
    <string name="tts_init_failed">TTS initialisation failed</string>


    <!-- Strings for preferances-->

    <string name="action_settings">Profile Settings</string>
    <string name="title_activity_settings">Settings</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="default_gallery_storage">TTS voice speed rate </string>
    <string name="title_auto_upload">Send Notification</string>
    <string name="summary_upload_over_wifi">Send Push notification</string>
    <string name="title_upload_quality">Exercises Difficulty</string>
    <string name="summary_upload_video_quality">Specify the time for each exercises</string>
    <string name="pref_title_notifications">Notifications</string>
    <string name="summary_choose_ringtone">Choose notification sound</string>
    <string name="pref_header_about">About</string>
    <string name="summary_about">We are a team of like-minded people, specialized in development of Android App Development creating new trends across the app space. Glad to Help in anyway!</string>
    <string name="app_version">1.3</string>
    <string name="summary_support">Got any queries? We are happy to help!</string>
    <string name="title_send_feedback">Send Feedback</string>
    <string name="title_faq">FAQ</string>
    <string name="summary_faq">View frequently asked questions</string>
    <string name="url_faq">https://www.androidhive.info/privacy-policy/</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="url_privacy">https://www.androidhive.info/privacy-policy/</string>
    <string name="title_terms">Terms &amp; Conditions</string>
    <string name="url_terms">https://www.androidhive.info/terms-of-service/</string>
    <string name="title_version" translatable="false">Version</string>
    <string name="choose_email_client">Choose email client</string>
    <string name="title_gallery_storage">TTS speed</string>
    <string name="title_new_notification_sound">New message notification</string>
    <string name="title_vibrate">Vibrate</string>
    <string name="summary_vibrate">Vibrate on new notification</string>
    <string name="key_upload_over_wifi">key_upload_over_wifi</string>
    <string name="key_gallery_name">key_gallery_name</string>
    <string name="key_upload_quality">key_upload_quality</string>
    <string name="notifications_new_message">notifications_new_message</string>
    <string name="key_notifications_new_message_ringtone">key_notifications_new_message_ringtone</string>
    <string name="key_vibrate">key_vibrate</string>
    <string name="key_send_feedback">key_send_feedback</string>
    <string name="key_tts_speed">key_tts_speed</string>


    <string-array name="pref_difficulty_entries">
        <item>Easy</item>
        <item>Medium</item>
        <item>Hard</item>
        <item>Extreme</item>
    </string-array>

    <string-array name="pref_difficulty_values">
        <item>10</item>
        <item>20</item>

        <item>30</item>
        <item>40</item>
    </string-array>


    <string-array name="pref_tts_entries">
        <item>Slow</item>
        <item>Normal</item>
        <item>Fast</item>
    </string-array>

    <string-array name="pref_tts_values">
        <item>0.3</item>
        <item>0.6</item>

        <item>0.9</item>

    </string-array>

    <string name="abs">Start by doing 10 push ups then do 10 squats,you should start slowly  </string>
    <string name="leg">warm up first then try to do pull ups,then try to do more pull ups with only one hand you need to keep your back straight and as long as possible</string>
    <string name="shoulder">warm up first then try to do pull ups,then try to do more pull ups with only one hand make sure you feel the butn in your shoulders</string>
    <string name="prenom">Prenom</string>
    <string name="nom">Nom</string>
    <string name="se_connecter">Se connecter</string>
    <string name="nouveau_membre">Nouveau membre? Rejoinez nous</string>
    <string name="mot_de_passe">Mot de Passe</string>
    <string name="confirmation_mot_de_passe">Confirmation de Mot de Passe</string>
    <string name="already_registered">Already Registered ? Login Here</string>


</resources>
