<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Register">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        app:cardCornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.65"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="40dp"
                    android:text="Inscription"
                    android:textSize="22sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/nom"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginStart="22dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="22dp"
                    android:background="@drawable/edit_text_style"
                    android:drawableStart="@drawable/ic_person_black_24dp"
                    android:drawableLeft="@drawable/ic_person_black_24dp"
                    android:hint="@string/nom" />

                <EditText
                    android:id="@+id/prenom"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginStart="22dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="22dp"
                    android:background="@drawable/edit_text_style"
                    android:drawableStart="@drawable/ic_person_black_24dp"
                    android:drawableLeft="@drawable/ic_person_black_24dp"
                    android:hint="@string/prenom" />

                <EditText

                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"

                    android:layout_marginStart="22dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="22dp"
                    android:background="@drawable/edit_text_style"
                    android:drawableStart="@drawable/ic_email_black_24dp"
                    android:drawableLeft="@drawable/ic_email_black_24dp"
                    android:hint="@string/email_hint"
                    android:inputType="textEmailAddress" />

                <EditText
                    android:id="@+id/password1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginStart="22dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="22dp"
                    android:background="@drawable/edit_text_style"
                    android:drawableStart="@drawable/ic_lock_black_24dp"
                    android:drawableLeft="@drawable/ic_lock_black_24dp"
                    android:hint="@string/mot_de_passe"
                    android:inputType="textPassword" />

                <EditText
                    android:id="@+id/password2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginStart="22dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="22dp"
                    android:background="@drawable/edit_text_style"
                    android:drawableStart="@drawable/ic_lock_black_24dp"
                    android:drawableLeft="@drawable/ic_lock_black_24dp"
                    android:hint="@string/confirmation_mot_de_passe"
                    android:inputType="textPassword" />

                <!--<androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="15dp"

                    app:cardCornerRadius="35dp">
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/azur">
                        <RadioGroup
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:id="@+id/Sexe"
                            android:layout_margin="10dp"
                            >


                            <RadioButton
                                android:id="@+id/rbMale"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:text="Masculin"
                                android:layout_weight="1"
                                />
                            <RadioButton
                                android:id="@+id/rbFemale"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="Feminin"
                                />

                        </RadioGroup>

                        <RelativeLayout
                            android:id="@+id/Relative1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="15dp"
                            android:orientation="horizontal"
                            android:layout_below="@id/Sexe">

                            <NumberPicker
                                android:id="@+id/Age"
                                android:layout_width="55dp"
                                android:layout_height="55dp"

                                android:layout_gravity="center_horizontal">

                            </NumberPicker>


                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_vertical"
                                android:text="Age"
                                android:layout_toEndOf="@id/Age"
                                android:layout_centerVertical="true"
                                android:textSize="18sp"
                                android:layout_toRightOf="@id/Age" />

                        </RelativeLayout>



                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="15dp"
                            android:orientation="horizontal"
                            android:layout_below="@id/Relative1">

                            <NumberPicker
                                android:id="@+id/Poids"
                                android:layout_width="55dp"
                                android:layout_height="55dp"

                                android:layout_gravity="center_horizontal">


                            </NumberPicker>


                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_vertical"
                                android:text="kg"
                                android:layout_toEndOf="@id/Poids"
                                android:layout_centerVertical="true"
                                android:textSize="18sp"
                                android:layout_toRightOf="@id/Poids" />

                        </RelativeLayout>


                    </RelativeLayout>
                </androidx.cardview.widget.CardView>-->


                <Button
                    android:id="@+id/registerBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/button_style"
                    android:text="S'inscrire"
                    android:textColor="@color/white"
                    app:backgroundTint="@color/colorPrimary" />

                <TextView
                    android:id="@+id/loginView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="16dp"
                    android:text="@string/already_registered"
                    android:textColor="#3366BB "
                    android:textColorLink="#f2f"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/registerBtn" />

                <ProgressBar
                    android:id="@+id/progressBar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="20dp"
                    android:visibility="gone" />


            </LinearLayout>
        </ScrollView>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>